--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME='Radically Honest Parrot'
 APP_ENV=local
-APP_KEY=base64:ZVlt3aIFfPFBI8sp5j0IBv788SsOzj85Bu7/ntYODX4=
-APP_DEBUG=false
+APP_KEY=base64:
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=konetweb_parrot
-DB_USERNAME=konetweb_parrot
-DB_PASSWORD=radically_honest_parrot_1
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
